feat(unit-tests): creating my first unit tests